--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
   <h1>About the Cat Collector</h1>
   <hr />
   <p>Hire the Cat Collector!</p>
   <footer>All Rights Reserved, &copy; 2022 Cat Collector</footer>  
-</body>
-</html>
+{% endblock %}
+  
