--- a/main_app/templates/cats/index.html
+++ b/main_app/templates/cats/index.html
@@ -4,18 +4,20 @@
 <h1>Cat List</h1>
 
 {% for cat in cats %}
-  <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ cat.name }}</span>
-      <p>Breed: {{ cat.breed }}</p>
-      <p>Description: {{ cat.description }}</p>
-      {% if cat.age > 0 %}
-        <p>Age: {{ cat.age }}</p>
-      {% else %}
-        <p>Age: Kitten</p>
-      {% endif %}
+  <a href="{% url 'detail' cat.id %}">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ cat.name }}</span>
+        <p>Breed: {{ cat.breed }}</p>
+        <p>Description: {{ cat.description|linebreaks }}</p>
+        {% if cat.age > 0 %}
+          <p>Age: {{ cat.age }}</p>
+        {% else %}
+          <p>Age: Kitten</p>
+        {% endif %}
+      </div>
     </div>
-  </div>
+  </a>
 {% endfor %}
 
 {% endblock %}
