--- a/main_app/templates/cats/detail.html
+++ b/main_app/templates/cats/detail.html
@@ -3,21 +3,47 @@
 
 <h1>Cat Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ cat.name }}</span>
-    <p>Breed: {{ cat.breed }}</p>
-    <p>Description: {{ cat.description|linebreaks }}</p>
-    {% if cat.age > 0 %}
-      <p>Age: {{ cat.age }}</p>
-    {% else %}
-      <p>Age: Kitten</p>
-    {% endif %}
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ cat.name }}</span>
+        <p>Breed: {{ cat.breed }}</p>
+        <p>Description: {{ cat.description|linebreaks }}</p>
+        {% if cat.age > 0 %}
+          <p>Age: {{ cat.age }}</p>
+        {% else %}
+          <p>Age: Kitten</p>
+        {% endif %}
+      </div>
+      <div class="card-action">
+        <a href="{% url 'cats_update' cat.id %}">Edit</a>
+        <a href="{% url 'cats_delete' cat.id %}">Delete</a>
+      </div>
+    </div>
   </div>
-  <div class="card-action">
-    <a href="{% url 'cats_update' cat.id %}">Edit</a>
-    <a href="{% url 'cats_delete' cat.id %}">Delete</a>
+  <!-- New Markup Below -->
+  <div class="col s6">
+    <form method="POST">
+      {% csrf_token %}
+      <!-- Render the inputs -->
+      {{ feeding_form.as_p }}
+      <input type="submit" class="btn" value="Add Feeding">
+    </form>
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Meal</th></tr>
+      </thead>
+      <tbody>
+        {% for feeding in cat.feeding_set.all %}
+          <tr>
+            <td>{{feeding.date}}</td>
+            <td>{{feeding.get_meal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
+  <!-- New Markup Above -->
 </div>
-
 {% endblock %}
