completes many-to-many lesson adding toy add & remove functionality

--- a/main_app/templates/cats/detail.html
+++ b/main_app/templates/cats/detail.html
@@ -50,7 +50,53 @@
       </tbody>
     </table>
   </div>
-  <!-- New Markup Above -->
+</div>
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ cat.name }}'s Toys</h3>
+    {% if cat.toys.count %}
+      {% for toy in cat.toys.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'disassoc_toy' cat.id toy.id %}" method="PATCH">
+              {% csrf_token %}
+              <button type="submit" class="btn">Remove</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Toys 😿</h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>Available Toys</h3>
+    {% if toys.count %}
+      {% for toy in toys.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_toy' cat.id toy.id %}" method="POST">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{cat.name}} Already Has All Toys Available</h5>
+    {% endif %}
+  </div>
 </div>
 
 <script>
