--- a/main_app/templates/cats/detail.html
+++ b/main_app/templates/cats/detail.html
@@ -21,8 +21,18 @@
         <a href="{% url 'cats_delete' cat.id %}">Delete</a>
       </div>
     </div>
+    {% for photo in cat.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
+    <form action="{% url 'add_photo' cat.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+      {% csrf_token %}
+      <input type="file" name="photo-file">
+      <br><br>
+      <button type="submit" class="btn">Upload Photo</button>
+  </form>
   </div>
-  <!-- New Markup Below -->
   <div class="col s6">
     <form action="{% url 'add_feeding' cat.id %}" method="POST">
       {% csrf_token %}
