--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,10 +20,21 @@
                 </ul>
                 <ul class="right">
                   <li><a href="{% url 'about' %}">About</a></li>
-                  <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
-                  <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
-                  <li><a href="{% url 'cats_create' %}">Add a Cat</a></li>
-                  <li><a href="{% url 'index' %}">View All My Cats</a></li>
+                  {% if user.is_authenticated %}
+                    <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+                    <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
+                    <li><a href="{% url 'cats_create' %}">Add a Cat</a></li>
+                    <li><a href="{% url 'index' %}">View All My Cats</a></li>
+                    <li>
+                      <form action="{% url 'logout' %}" method="POST">
+                        {% csrf_token %}
+                        <button type="submit">Logout</button>
+                      </form>
+                    </li>
+                  {% else %}
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                    <li><a href="{% url 'login' %}">Log In</a></li>
+                  {% endif %}
                 </ul>
             </div>
         </nav>
